--- a/Server/Readdit.Services/Readdit.Services.csproj
+++ b/Server/Readdit.Services/Readdit.Services.csproj
@@ -8,7 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
       <PackageReference Include="CloudinaryDotNet" Version="1.20.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.11" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
