Modifying various components ...

--- a/Server/Readdit.Web/appsettings.Example.json
+++ b/Server/Readdit.Web/appsettings.Example.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CorsOrigins": "<Allowed_Origins>",
   "ConnectionStrings": {
     "DefaultConnection": "<Database_Connection_String>"
   },
@@ -12,6 +13,9 @@
     "Cloud": "<Cloud_Name>",
     "ApiKey": "<Api_Key>",
     "ApiSecret": "<Api_Secret>"
+  },
+  "SendGridSettings": {
+    "ApiKey": "<SendGrid_ApiKey>"
   },
   "JwtSettings": {
     "AppSecret": "<App_Secret>",
