--- a/Server/Readdit.Services/Readdit.Services.csproj
+++ b/Server/Readdit.Services/Readdit.Services.csproj
@@ -15,6 +15,8 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.11" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
+      <PackageReference Include="SendGrid" Version="9.28.1" />
+      <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
     </ItemGroup>
 
