--- a/Server/Readdit.Web/Readdit.Web.csproj
+++ b/Server/Readdit.Web/Readdit.Web.csproj
@@ -13,10 +13,10 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Readdit.Services\Readdit.Services.csproj" />
     </ItemGroup>
-
 </Project>
