Adding various React components / pages for displaying Posts ...

--- a/Server/Readdit.Web/appsettings.Development.json
+++ b/Server/Readdit.Web/appsettings.Development.json
@@ -4,5 +4,26 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CorsOrigins": "http://localhost:3000",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Readdit;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
+  "CloudinarySettings": {
+    "Cloud": "vnikolaev2525",
+    "ApiKey": "525113827526597",
+    "ApiSecret": "4RLE69ja7jCk-MS-Eh6UUMM1s88"
+  },
+  "SendGridSettings": {
+    "ApiKey": "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"
+  },
+  "JwtSettings": {
+    "AppSecret": "Some super cool secret",
+    "ValidIssuer": "Readdit",
+    "ValidAudience": "Readdit",
+    "ValidateLifetime": true,
+    "ValidateActor": true,
+    "RelativeExpirationInHours": 1
   }
 }
