--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
-    "@chakra-ui/react": "^2.4.3",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@mantine/core": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
+    "@mantine/notifications": "^5.9.5",
     "@tanstack/react-query": "^4.19.1",
     "@tanstack/react-query-devtools": "^4.19.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,7 +18,6 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
-    "framer-motion": "^7.6.19",
     "moment": "^2.29.4",
     "orval": "^6.10.3",
     "react": "^18.2.0",
@@ -34,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "format": "prettier --config .prettierrc.json --loglevel silent --write \"{**/*, *}.{ts,tsx}\""
+    "format": "prettier --config .prettierrc.json --loglevel silent --write \"{**/*, *}.{ts,tsx}\"",
+    "format2": "prettier --config .prettierrc.json --write \"{**/*, *}.{ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1"
   }
 }
